[project]
name = "cole-medin-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.3",
    "logfire>=3.16.0",
    "pydantic-ai>=0.2.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.10",
    "streamlit>=1.45.1",
    "supabase>=2.15.1",
]
